--- a/assets/style.css
+++ b/assets/style.css
@@ -23,12 +23,11 @@ body {
   color: #8899a6;
 }
 
-#images {
+#snapshots {
   display: flex;
-  transition: transform 0.2s ease;
 }
 
-#images img {
+#snapshots img {
   margin-right: 10px;
   width: 32.1vw;
   height: auto;
@@ -51,6 +50,11 @@ a {
   align-items: center;
   margin: 5px;
   transition: transform 0.2s ease;
+  color: #007bff;
+}
+
+a:hover {
+  transform: translateY(-5px);
   color: #007bff;
 }
 
@@ -88,57 +92,12 @@ a:visited {
   margin-left: 5px;
 }
 
-button {
-  outline: none;
-  cursor: pointer;
-  border: none;
-  padding: 0.9rem 2rem;
-  margin: 0;
-  font-family: inherit;
-  font-size: inherit;
-  position: relative;
-  display: inline-block;
-  letter-spacing: 0.05rem;
-  font-weight: 700;
-  font-size: 17px;
-  border-radius: 500px;
-  overflow: hidden;
-  background: #66ff66;
-  color: ghostwhite;
-  width: fit-content;
-  height: fit-content;
- }
- 
- button span {
-  position: relative;
-  z-index: 10;
-  transition: color 0.4s;
- }
- 
- button:hover span {
-  color: #121212;
- }
- 
- button::before,
- button::after {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 0;
- }
- 
- button::before {
-  content: "";
-  background: #121212;
-  width: 120%;
-  left: -10%;
-  transform: skew(30deg);
-  transition: transform 0.4s cubic-bezier(0.3, 1, 0.8, 1);
- }
- 
- button:hover::before {
-  transform: translate3d(100%, 0, 0);
- }
- 
+@media (max-width: 768px) {
+  #snapshots img {
+    width:100%;
+    margin-top: 10px;
+  }
+  #snapshots {
+    flex-direction: column;
+  }
+}
