--- a/assets/style.css
+++ b/assets/style.css
@@ -6,6 +6,7 @@ h1 {
   font-family: "Montserrat", sans-serif;
   transition: transform 0.2s ease;
   color: #5588ff;
+  font-size: xx-large;
 }
 
 h1:hover {
@@ -15,12 +16,42 @@ h1:hover {
 h3 {
   font-family: "Poppins", sans-serif;
   color: #2a9d8f;
+  font-size: larger;
 }
+
+.navbar {
+  display: flex;
+  background-color: #121212;
+  position: fixed;
+  width: 100vw;
+  z-index: 9999;
+  top: 0;
+  left: 0;
+  padding-top: 5px;
+  padding-left: 10px;
+}
+
+.navbar ul{
+  display: flex;
+  align-items: center;
+  position: fixed;
+  right: 0;
+  top: 1rem;
+  padding-right: 1rem;
+}
+
 
 body {
   font-family: "Nunito", sans-serif;
   background-color: #121212;
   color: #8899a6;
+  font-size: large;
+}
+
+#spacer {
+  height: 60px;
+  top: 0;
+  overflow: hidden;
 }
 
 #snapshots {
@@ -31,6 +62,7 @@ body {
   margin-right: 10px;
   width: 32.1vw;
   height: auto;
+  border-radius: 5%;
 }
 
 #socials {
@@ -100,4 +132,22 @@ a:visited {
   #snapshots {
     flex-direction: column;
   }
+  .navbar {
+    display: flex;
+    flex-direction: column;
+    
+  }
+}
+
+ul {
+  list-style-type: none;
+  gap: 1rem;
+}
+
+#schools {
+  display: flex;
+}
+
+html {
+  scroll-behavior: smooth;
 }
